--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/otherrelevantindividuals/ConfirmOtherRelevantIndividualsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/otherrelevantindividuals/ConfirmOtherRelevantIndividualsPage.scala.html
@@ -14,10 +14,14 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcNewTabLinkHelper
+@import uk.gov.hmrc.hmrcfrontend.views.viewmodels.newtablinkhelper.NewTabLinkHelper
+
 @import uk.gov.hmrc.agentregistration.shared.AgentApplication
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLimitedCompany
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationSoleTrader
+@import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.forms.ConfirmOtherRelevantIndividualsForm
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo.*
@@ -30,7 +34,9 @@
         govukRadios: GovukRadios,
         formWithCSRF: FormWithCSRF,
         govukButton: GovukButton,
-        continueOrSaveForLater: ContinueOrSaveForLater
+        continueOrSaveForLater: ContinueOrSaveForLater,
+        hmrcNewTabLinkHelper: HmrcNewTabLinkHelper,
+        appConfig: AppConfig
 )
 
 @(
@@ -53,8 +59,7 @@
     }
 }
 
-@h1 = @{messages(s"$key.heading.$businessTypeKey")}
-@question = @{messages(s"$key.question.$businessTypeKey", entityName)}
+@h1 = @{messages(s"$key.heading")}
 
 @layout(
     pageTitle = h1,
@@ -64,31 +69,22 @@
 
     <h1 class="govuk-heading-l">@h1</h1>
 
-    <p class="govuk-body">@messages(s"$key.intro.$businessTypeKey", entityName)</p>
+    <p class="govuk-body">@messages(s"$key.p1")</p>
+    <p class="govuk-body">@messages(s"$key.p2.$businessTypeKey", entityName)</p>
 
-    <ul class="govuk-list govuk-list--bullet">
-        <li>@messages(s"$key.responsibilities.bullet1")</li>
-        <li>@messages(s"$key.responsibilities.bullet2")</li>
-    </ul>
-
-    <h2 class="govuk-heading-m">@messages(s"$key.definition.heading.$businessTypeKey")</h2>
-
-    <p class="govuk-body">@messages(s"$key.definition.p1.$businessTypeKey")</p>
-    <p class="govuk-body">@messages(s"$key.definition.p2.$businessTypeKey")</p>
-
-    <p class="govuk-body">@messages(s"$key.definition.canBe.$businessTypeKey")</p>
-    <ul class="govuk-list govuk-list--bullet">
-        <li>@messages(s"$key.definition.bullet1.$businessTypeKey")</li>
-        <li>@messages(s"$key.definition.bullet2.$businessTypeKey")</li>
-        <li>@messages(s"$key.definition.bullet3.$businessTypeKey")</li>
-    </ul>
+  <p class="govuk-body">
+  @hmrcNewTabLinkHelper(NewTabLinkHelper(
+    text = messages(s"$key.guidanceLink"),
+    href = Some(appConfig.guidanceForWhatARelevantTaxAdviserIsUrl),
+  ))
+  </p>
 
     @formWithCSRF(action = AppRoutes.apply.listdetails.otherrelevantindividuals.ConfirmOtherRelevantIndividualsController.submit) {
 
         @govukRadios(Radios(
             fieldset = Some(Fieldset(
                 legend = Some(Legend(
-                    content = Text(question),
+                    content = Text(messages(s"$key.label", entityName)),
                     isPageHeading = false,
                     classes = "govuk-fieldset__legend--m"
                 ))
