--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/FastForwardPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/FastForwardPage.scala.html
@@ -99,4 +99,15 @@
         }
         </ul>
     </p>
+
+    <p class="govuk-body">
+        <h2 class="govuk-caption-xl">Limited Partnership</h2>
+            <ul class="govuk-list govuk-list--bullet">
+            @CompletedSection.CompletedSectionLimitedPartnership.values.filter(_.alreadyDeveloped).sortBy(_.displayOrder).map { completedSection =>
+                <li>
+                    <a class="govuk-link" href="@{AppRoutes.testOnly.applicant.FastForwardController.fastForward(completedSection)}">@completedSection.sectionName</a>
+                </li>
+            }
+            </ul>
+    </p>
 }
