--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/FastForwardPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/FastForwardPage.scala.html
@@ -110,4 +110,15 @@
             }
             </ul>
     </p>
+
+    <p class="govuk-body">
+    <h2 class="govuk-caption-xl">Scottish Limited Partnership</h2>
+        <ul class="govuk-list govuk-list--bullet">
+        @CompletedSection.CompletedSectionScottishLimitedPartnership.values.filter(_.alreadyDeveloped).sortBy(_.displayOrder).map { completedSection =>
+            <li>
+                <a class="govuk-link" href="@{AppRoutes.testOnly.applicant.FastForwardController.fastForward(completedSection)}">@completedSection.sectionName</a>
+            </li>
+        }
+        </ul>
+    </p>
 }
