--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/ConfirmationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/ConfirmationPage.scala.html
@@ -14,18 +14,15 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.BusinessType
 @import uk.gov.hmrc.agentregistration.shared.AgentApplication
+@import uk.gov.hmrc.agentregistration.shared.BusinessType
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.components.CopyButton
-@import views.html.helper.CSPNonce
 
 @this(
         appConfig: AppConfig,
         layout: Layout,
-        govukPanel: GovukPanel,
-        copyButton: CopyButton
+        govukPanel: GovukPanel
 )
 
 @(
@@ -37,10 +34,6 @@
 
 @key = @{"confirmation"}
 @pageTitle = @{messages(s"$key.title")}
-@provideDetailsLink = @{appConfig.applicationLink(agentApplication.linkId.value).toString}
-@templateScripts = {
-  <script src="@{controllers.routes.Assets.versioned("javascripts/copy-button.js")}" @{CSPNonce.attr}></script>
-}
 @businessTypeKey = @{agentApplication.businessType match {
   case BusinessType.SoleTrader => "SoleTrader"
   case BusinessType.Partnership.LimitedLiabilityPartnership => "Llp"
@@ -50,20 +43,10 @@
   case BusinessType.Partnership.ScottishLimitedPartnership => "ScottishLimitedPartnership"
   case BusinessType.Partnership.ScottishPartnership => "ScottishPartnership"
 }}
-@templateStyles = {
-  <link rel="stylesheet" href="@{controllers.routes.Assets.versioned("stylesheets/copy-button.css")}" @{CSPNonce.attr}>
-  <style @{CSPNonce.attr}>
-    .govuk-panel.govuk-panel--confirmation {
-      background-color: rgb(29, 112, 184);
-      color: white;
-    }
-  </style>
-}
+
 @layout(
     pageTitle = pageTitle,
-    suppressBackLink = true,
-    templateScripts = Some(templateScripts),
-    templateStyles = Some(templateStyles)
+    suppressBackLink = true
 ) {
 
   @govukPanel(Panel(
@@ -71,32 +54,24 @@
     content = Text(s"""${messages(s"$key.subtitle")} HDJ2123F""")
   ))
 
-  <h2 class="govuk-heading-m">
-    @{messages(s"$key.whatNext.h2")}
-  </h2>
+  <h2 class="govuk-heading-m">@{messages(s"$key.whatNext.h2")}</h2>
   <p class="govuk-body">
-    @{messages(s"$key.whatNext.p1.$businessTypeKey.${agentApplication.getUserRole.toString}", entityName)}
+    @{messages(s"$key.p1")}
   </p>
   <p class="govuk-body">
-    @{messages(s"$key.whatNext.p2.$businessTypeKey.${agentApplication.getUserRole.toString}")}
-  </p>
-  <p class="govuk-body govuk-!-font-weight-bold">@provideDetailsLink</p>
-  @copyButton(clip = provideDetailsLink)
-
-  <h2 class="govuk-heading-m">@{messages(s"$key.checkProgress.h2")}</h2>
-  <p class="govuk-body">
-    @{messages(s"$key.checkProgress.p1")}
+    @{messages(s"$key.p2")}
   </p>
   <p class="govuk-body">
-    @{messages(s"$key.checkProgress.p2")}
+    @{messages(s"$key.p3", "10 July 2026")}
   </p>
+  <h2 class="govuk-heading-m">@{messages(s"$key.decision.h2")}</h2>
   <p class="govuk-body">
-    @{messages(s"$key.checkProgress.p3")}
+    @{messages(s"$key.decision.p1")}
   </p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>@{messages(s"$key.checkProgress.bullet1")}</li>
-    <li>@{Html(messages(s"$key.checkProgress.bullet2", agentApplication.getApplicantContactDetails.getVerifiedEmail.value))}</li>
-  </ul>
+  <h2 class="govuk-heading-m">@{messages(s"$key.progress.h2")}</h2>
+  <p class="govuk-body">
+    @{messages(s"$key.progress.p1")}
+  </p>
 
   <p class="govuk-body govuk-!-display-none-print">
     <a class="govuk-link" href="@{AppRoutes.apply.AgentApplicationController.viewSubmittedApplication.url}">@{messages(s"$key.viewLink")}</a>
